civo-gitlab/templates/mgmt/components/argocd/argocd-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    <CERT_MANAGER_ISSUER_ANNOTATION_1>
    <CERT_MANAGER_ISSUER_ANNOTATION_2>
    <CERT_MANAGER_ISSUER_ANNOTATION_3>
    <CERT_MANAGER_ISSUER_ANNOTATION_4>
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTPS'
spec:
  rules:
  - host: argocd.<DOMAIN_NAME>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
  tls:
  - hosts:
    - argocd.<DOMAIN_NAME>
    secretName: argocd-server-tls
